Fix button spacing

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -98,6 +98,7 @@ p,
   color: white;
   background-color: var(--blue);
   border: var(--blue);
+  margin-top: 20px;
 }
 
 .btn-create {
